resolved alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,8 +30,8 @@ ul, ol, .nopadding {
     font-size: 1rem;
     list-style-type: none;
     border-radius: 50%;
-    transition: 0.5s ease all;
-    margin-right: 0.5rem;
+    transition: 0.2s ease all;
+    margin-right: 0.4rem;
     cursor: pointer;
     &:nth-last-child() {
       margin-right: 0;
@@ -47,6 +47,7 @@ ul, ol, .nopadding {
   padding: 1.2rem;
   margin-bottom: 2rem;
   border: 1px solid rgb(223, 223, 223);
+  color: #555555;
 }
 
 .image-box{
@@ -57,12 +58,26 @@ ul, ol, .nopadding {
 .yellow_star {
   background: url(../src/assets/images/ystar.svg) no-repeat center center;
   background-size: contain;
-  height: 0.8rem;
-  width: 0.8rem;
+  height: 1rem;
+  width: 1rem;
   display: inline-block;
   margin: 0 0.1rem;
 }
 
 .yellow_star {
   background: url(../src/assets/images/ystar.svg) no-repeat center center;
+}
+.hotelName{
+    font-size: 2rem;
+    font-weight: normal;
+}
+.locationDetails{
+    font-size: 1rem;
+    font-weight: normal;
+}
+.priceInfoSmallText{
+    font-size: 0.8rem;
+}
+.priceText{
+    font-size: 2rem;
 }
